# ServiceDispatcher

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
inc/: ServiceDispatcher.h  ServiceDispatcherQueue.h  ServiceDispatcherRouter.h
src/: CMakeLists.txt  ServiceDispatcherQueue.c  ServiceDispatcherRouter.c
test/: CMakeLists.txt  check_ServiceDispatcherQueue.c
